OGL preview render speed regression #34817

Closed
opened 2013-03-30 23:16:09 +01:00 by Daniel Salazar · 8 comments
Member

%%%--- Operating System, Graphics card ---

Linux 64
GTX 480 SC

- Blender version with error, and version that worked ---

2.6 was fast, same speed as viewport animation playback

2.61 and up is slow

- Short description of error ---

OGL render is very slow, up to 3 secs per frame on basic animation files

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Press the OGL render animation button in the 3D view in the attached file

%%%

%%%--- Operating System, Graphics card --- Linux 64 GTX 480 SC - Blender version with error, and version that worked --- 2.6 was fast, same speed as viewport animation playback 2.61 and up is slow - Short description of error --- OGL render is very slow, up to 3 secs per frame on basic animation files - Steps for others to reproduce the error (preferably based on attached .blend file) --- Press the OGL render animation button in the 3D view in the attached file %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%Checked on code and logs. It's caused by svn rev42275 whic hwas a fix for #27981.

For proper rendering it's linearization of float buffer is needed, which takes time. Could be optimized (using multi-threading or GLSL) but would not consider this is a bug.

Thanks for the report anyway.%%%

%%%Checked on code and logs. It's caused by svn rev42275 whic hwas a fix for #27981. For proper rendering it's linearization of float buffer is needed, which takes time. Could be optimized (using multi-threading or GLSL) but would not consider this is a bug. Thanks for the report anyway.%%%
Member

%%%Hey sergey, would your awesome glsl code also work for this case?%%%

%%%Hey sergey, would your awesome glsl code also work for this case?%%%

%%%Linearization already happens with GLSL. The only possible speed regression could be is file saving, which would not use GLSL for color space conversion and i do not want to use it there actually.%%%

%%%Linearization already happens with GLSL. The only possible speed regression could be is file saving, which would not use GLSL for color space conversion and i do not want to use it there actually.%%%

%%%Reopened and assigning to self, will look into it to see if I can improve performance here.%%%

%%%Reopened and assigning to self, will look into it to see if I can improve performance here.%%%

%%%Improved performance in svn now, about 1.2x slower than 2.60 still, but that's a lot better than 5x slower.

Also note enabling anti-aliasing will slow things down, it's disabled in the attached file, but probably good to remember.%%%

%%%Improved performance in svn now, about 1.2x slower than 2.60 still, but that's a lot better than 5x slower. Also note enabling anti-aliasing will slow things down, it's disabled in the attached file, but probably good to remember.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

%%%Thank you! Very much improved.%%%

%%%Thank you! Very much improved.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34817
No description provided.